k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-deployment
  labels:
    app: nextcloud
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      containers:
      - name: nextcloud
        image: <ECR_URL>:latest  # 👈 GitHub Actions에서 자동으로 교체됨
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
spec:
  type: LoadBalancer
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
