k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-service
  labels:
    app: nextcloud
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
